fix: z-index in captcha field and forms

--- a/styles/main/popup_talkwithus.css
+++ b/styles/main/popup_talkwithus.css
@@ -11,12 +11,13 @@
   top: 0;
   transition: 0.3s ease;
   width: 100%;
-  z-index: 1001;
+  z-index: -1;
 }
 
 .popup.active {
   opacity: 1;
   pointer-events: all;
+  z-index: 1001;
 }
 
 .popup-content {
